Add date formatting

--- a/views/message.ejs
+++ b/views/message.ejs
@@ -1,1 +1,1 @@
-<li><%= message.user %>: <%= message.text %> - <%= message.added %></li>
+<li><%= message.user %>: <%= message.text %> - <%= message.added.toLocaleString() %></li>
