--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,5 +6,7 @@
     <ul>
       <% messages.forEach((message) => { %> <%- include('message', {message: message}); %> <% }); %>
     </ul>
+    <br />
+    <a href="/new">Add a new comment!</a>
   </body>
 </html>
